--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
 .App {
     margin: 0;
     font-family: "Inter", "sans-serif";
+    background-color: #EFEFEF;
+    height: 100vh;
 }
 
 * {
@@ -31,23 +33,36 @@ header {
     font-size: 15px;
     letter-spacing: -.075em;
     color: white;
+    margin-bottom: 0;
 }
 
 /* Locations styling */
 
 /* Travel Card styling */
-.card {
+.travel-card {
     display: flex;
     height: 168px;
     width: 470px;
     padding: 30px;
     align-items: center;
     color: #2B283A;
+    box-sizing: content-box;
+}
+
+.card--modal-btn {
+    border: none;
+    margin-inline: 10px;
+    height: 100%;
 }
 
 .card--trip-pic {
     border-radius: 15px;
-    padding-inline: 10px;
+    height: 100%;
+}
+
+.card--trip-pic:hover {
+    opacity: 0.7;
+    border-radius: 15px;
 }
 
 .card--location-items {
@@ -65,6 +80,9 @@ header {
     text-transform: uppercase;
     letter-spacing: .17em;
     font-weight: 400;
+    font-size: 12px;
+    padding: 0;
+    margin: 0;
 }
 
 .card--google-maps {
@@ -74,8 +92,7 @@ header {
 
 .card--specific-location {
     font-size: 25px;
-    padding-top: 3px;
-    padding-bottom: 8px;
+    padding: 3px 0 8px 0 ;
 }
 
 .card--dates {
@@ -86,4 +103,64 @@ header {
 .card--description {
     text-align: justify;
     font-size: 10px;
+    padding: 0;
+    margin: 0;
+}
+
+/* Modal & Carousel styling */
+.modal--background {
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background-color: #918E9B;
+    display: flex;
+    position: fixed;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal--container {
+    width: 85vw;
+    height: 85vh;
+    background-color: white;
+    display: flex;
+}
+
+.modal--close-btn {
+    position: absolute;
+    /* margin-left: 15px; */
+    margin-top: 15px;
+    right: 9%;
+    /* justify-self: flex-end; */
+    padding: 10px;
+    background: none;
+    border: none;
+    font-size: 25px;
+    font-weight: 900;
+    opacity: 50%;
+    z-index: 100;
+}
+
+.modal--carousel {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+.carousel-inner {
+    display: flex;
+    background-color: #d3d4ced2;
+}
+
+.modal--img-landscape {
+    width: 100%;
+    height: auto;
+
+}
+
+.modal--img-portrait {
+    height: 100%;
+    margin: auto;
+    display: flex;
 }
