--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
     margin: 0;
     font-family: "Inter", "sans-serif";
     background-color: #EFEFEF;
-    height: 100vh;
+    height: 100%;
 }
 
 * {
